--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,191 @@
-html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0;font:17px/1.5 'Roboto',sans-serif;color:#f8f8f6;background-color:#0c0c0c;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}dd,dl,h1,p{margin:0;padding:0}h1,h2{margin:0;font-size:inherit;font-weight:400;line-height:.8}a{position:relative;border-bottom:1px solid #f8f8f6;color:inherit;text-decoration:none}a:focus,a:hover{color:#ea1c5b;border-bottom:1px solid #3d6eff}::-moz-focus-inner{padding:0;border:0}:focus{outline:0}::selection{text-shadow:none;background:#3d6eff}::-moz-selection{text-shadow:none;background:#3d6eff}.u-sans{font:700 17px/1 'Roboto',sans-serif;;letter-spacing:.02em}.u-sans--small{font-size:15px}.section{z-index:1;position:relative;padding:96px 0 96px 96px;width:calc(100vw - 96px - 7em);display:-webkit-box;display:flex;box-sizing:border-box;min-height:100vh}@media (max-width: 1024px) {.section{padding:48px 0 48px 48px;width:calc(100vw - 48px - 7em)}}@media (max-width: 768px) {.section{padding:7.5vw;width:100%}}@media (max-width: 600px) {.section{display:block;min-height:0}}.section--column{-webkit-box-orient:vertical;-webkit-box-direction:normal;flex-direction:column}@media (max-width: 600px) {.section--m-column{-webkit-box-orient:vertical;-webkit-box-direction:normal;flex-direction:column}}.section--spread{-webkit-box-pack:justify;justify-content:space-between}.section__col{width:100%;max-width:382px}@media (max-width: 600px) {.section__col{margin-bottom:15vw}}.bio{margin-bottom:-.45em;font-size:24px;font-weight:100;max-width:700px}@media (max-width: 600px) {.bio{padding-top:15vw;font-size:18px}}.list{margin-top:3.2em}.list__item{margin-top:.25em;margin-bottom:2em}.list__item:last-child{margin-bottom:-.4em}.crumple{z-index:-1;position:fixed;top:0;left:0;width:100vw;height:100vh;pointer-events:none}.crumple:after{content:"";position:absolute;top:0;left:0;display:block;width:100%;height:100%;background-color:#0c0c0c}.footer{position:fixed;right:96px;bottom:92px;display:-webkit-box;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;flex-direction:column;-webkit-box-align:end;align-items:flex-end}@media (max-width: 1024px) {.footer{right:48px;bottom:48px}}@media (max-width: 768px) {.footer{position:relative;right:auto;bottom:auto;padding:0 7.5vw 7.5vw;-webkit-box-align:start;align-items:flex-start}}.footer__link{margin-top:1em;line-height:1}@media (max-width: 768px) {.footer__link{display:inline}}
+html {
+	-ms-text-size-adjust: 100%;
+	-webkit-text-size-adjust: 100%
+}
+body {
+	margin: 0;
+	font: 17px/1.5'Roboto', sans-serif;
+	color: #f8f8f6;
+	background-color: #0c0c0c;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale
+}
+dd,
+dl,
+h1,
+p {
+	margin: 0;
+	padding: 0
+}
+h1,
+h2 {
+	margin: 0;
+	font-size: inherit;
+	font-weight: 400;
+	line-height: .8
+}
+a {
+	position: relative;
+	border-bottom: 1px solid #f8f8f6;
+	color: inherit;
+	text-decoration: none
+}
+a:focus,
+a:hover {
+	color: #ea1c5b;
+	border-bottom: 1px solid #3d6eff
+}
+::-moz-focus-inner {
+	padding: 0;
+	border: 0
+}
+:focus {
+	outline: 0
+}
+::selection {
+	text-shadow: none;
+	background: #3d6eff
+}
+::-moz-selection {
+	text-shadow: none;
+	background: #3d6eff
+}
+.u-sans {
+	font: 700 17px/1'Roboto', sans-serif;
+	;
+	letter-spacing: .02em
+}
+.u-sans--small {
+	font-size: 15px
+}
+.section {
+	z-index: 1;
+	position: relative;
+	padding: 96px 0 96px 96px;
+	width: calc(100vw - 96px - 7em);
+	display: -webkit-box;
+	display: flex;
+	box-sizing: border-box;
+	min-height: 100vh
+}
+@media (max-width: 1024px) {
+	.section {
+		padding: 48px 0 48px 48px;
+		width: calc(100vw - 48px - 7em)
+	}
+}
+@media (max-width: 768px) {
+	.section {
+		padding: 7.5vw;
+		width: 100%
+	}
+}
+@media (max-width: 600px) {
+	.section {
+		display: block;
+		min-height: 0
+	}
+}
+.section--column {
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	flex-direction: column
+}
+@media (max-width: 600px) {
+	.section--m-column {
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		flex-direction: column
+	}
+}
+.section--spread {
+	-webkit-box-pack: justify;
+	justify-content: space-between
+}
+.section__col {
+	width: 100%;
+	max-width: 382px
+}
+@media (max-width: 600px) {
+	.section__col {
+		margin-bottom: 15vw
+	}
+}
+.bio {
+	margin-bottom: -.45em;
+	font-size: 24px;
+	font-weight: 100;
+	max-width: 700px
+}
+@media (max-width: 600px) {
+	.bio {
+		padding-top: 15vw;
+		font-size: 18px
+	}
+}
+.list {
+	margin-top: 3.2em
+}
+.list__item {
+	margin-top: .25em;
+	margin-bottom: 2em
+}
+.list__item:last-child {
+	margin-bottom: -.4em
+}
+.crumple {
+	z-index: -1;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	pointer-events: none
+}
+.crumple:after {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: block;
+	width: 100%;
+	height: 100%;
+	background-color: #0c0c0c
+}
+.footer {
+	position: fixed;
+	left: 96px;
+	bottom: 92px;
+	display: -webkit-box;
+	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	flex-direction: column;
+	-webkit-box-align: end;
+	align-items: flex-end
+}
+@media (max-width: 1024px) {
+	.footer {
+		left: 48px;
+		bottom: 48px
+	}
+}
+@media (max-width: 768px) {
+	.footer {
+		position: relative;
+		left: auto;
+		bottom: auto;
+		padding: 0 7.5vw 7.5vw;
+		-webkit-box-align: start;
+		align-items: flex-start
+	}
+}
+.footer__link {
+	margin-top: 1em;
+	line-height: 1
+}
+@media (max-width: 768px) {
+	.footer__link {
+		display: inline
+	}
+}
